--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "googleapis": "^167.0.0",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
-    "path": "^0.12.7"
+    "node-fetch": "^2.7.0",
+    "path": "^0.12.7",
+    "pg": "^8.17.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   },
   "engines": {
     "node": ">=18.0.0"
