--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "seed:admin": "node backend/routes/seedAdmin.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
